Fix horizontal scrolling

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -918,7 +918,7 @@ footer {
   #index-fact2 div {
     display: grid;
     grid-template-areas: "fact2 exclamation2";
-    grid-template-columns: 90% auto; }
+    grid-template-columns: 80% auto; }
     #index-fact2 div #exclamation-mark2 {
       color: rgba(210, 175, 54, 0.75);
       grid-area: exclamation2; }
